<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:context="com.dslm.funddataanalysisapp.AddFundDialogFragment"
                android:padding="20dp">
    <EditText
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/id_fund_code_edit_text"
            android:layout_alignParentTop="true"
            android:inputType="number"
            android:textAlignment="viewEnd"
            android:hint="@string/fund_code_text"
            android:maxLength="6"
            android:maxLines="1"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_fund_code_cancel"
            android:layout_below="@+id/id_fund_code_edit_text"/>
    <Button
            android:text="@string/add"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_fund_code_add"
            android:layout_below="@+id/id_fund_code_edit_text"
            android:layout_toRightOf="@+id/id_fund_code_cancel"/>
</RelativeLayout>
